wr-8: * fix z-index

--- a/frontend/src/pages/auth/components/auth-layout/styles.module.scss
+++ b/frontend/src/pages/auth/components/auth-layout/styles.module.scss
@@ -32,6 +32,7 @@
 }
 
 .authFormWrapperInner {
+  z-index: 1;
   display: flex;
   flex-direction: column;
   align-items: center;
